--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,11 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <title>日程管理系统</title>
 </head>
 <body>
 <div id="app"></div>
 </body>
-<footer>Copyright© 2023 dcko. All rights reserved.</footer>
+<footer>Copyright© 2023 dck. All rights reserved.</footer>
 </html>
